[package]
name = "fwave_backend"
version = "0.1.0"
authors = ["Lucas Goetz <lgoetz@islux.lu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#tokio-postgres = { version= "0.5.5", features = ["with-chrono-0_4"] }


[dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "chrono" ] }
async-graphql = "1.17.8"
tokio = { version="0.2.22", features = ["macros", "tcp", "dns", "io-util"] }
hyper = "0.13.7"
log = "0.4"
pretty_env_logger = "0.4"
async-graphql-derive = "1.17.6"
async-graphql-parser = "1.17.3"
serde_json = "1.0.57"
serde = "1.0.115"
chrono = "0.4.15"
async-trait = "0.1.37"
dotenv = "0.15.0"
bcrypt = "0.8.2"
rand = "0.7.3"